--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   my_job:
      name: deploy to staging
-     runs-on: [self-hosted, macos-latest, arm64, macos-10.15]
+     runs-on: [self-hosted, macos-latest, macos-10.15]
     
      steps:
      - uses: actions/checkout@v2
